page overflow was fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -32,7 +32,6 @@ div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, p, blockquote, t
 }
 
 html {
-  box-sizing: border-box;
   font-size: 10px;
   margin: 0;
   padding: 0; 
